--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
         </nav>
         <section id="banner">
             <div class="banner-content">
-                <p>Early Access Now Open</p>
-                <h2>Structured thinking,not just note-taking.</h2>
+                <div>
+                    <h5>Early Access Now Open</h5>
+                    <p>A private space to store notes, links, and learning summaries — designed to help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
+                </div>
             </div>
-
         </section>
            
       
