all section done

--- a/index.html
+++ b/index.html
@@ -33,13 +33,15 @@
         <section id="banner">
            <div class="banner-container">
             <div class="banner-section">
-                <h5> <i class="fa-solid fa-circle"></i>Access Now Open</h5>
+                <button class="first-btn"> <i class="fa-solid fa-circle"></i> Early Access Now Open</button>
                 <h1>Structured Thinking, <span class="color-green">Not Just Note-taking.</span> </h1>
                 <p>A private space to store notes, links, and learning summaries — designed to help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
 
             </div>
-            <button class="btn"> Building Your Vault<img src="assets/ArrowRight.png"></button>
-            <button class="Secondary-btn"><i class="fa-solid fa-video"></i>See How It Works </button>
+            <div class="banner-button">
+            <button class="btn" ></i> Building Your Vault <i class="fa-solid fa-arrow-right"></i></button>
+            <button class="Secondary-btn"><i class="fa-solid fa-video"></i>  See How It Works </button>
+            </div>
            </div>
         </section>
 
@@ -67,7 +69,7 @@
                 <div class="skill-cards">
                     <img src="assets/Brain.png" alt="">
                     <h3>No idea connections</h3>
-                    <P>Insights stay isolated, never building into bigger understanding.</P>
+                    <P>Insights stay isolated, never building bigger understanding.</P>
 
                 </div>
                 <div class="skill-cards">
@@ -87,17 +89,18 @@
             <div class="portfolio-image">
                 <img src="assets/knowledge.png" alt="">
                 </div>
-            
+            <div class="portfolio-info">
             <h5>The Solution </h5>
             <h2>Your second brain, structured by design.</h2>
             <p>Personal Knowledge Vault isn't another note-taking app. z It's a thinking environment where every note, link, and summary becomes part of an interconnected web of understanding.</p>
             
             <ul class="portfolio-list">
-                <li><img src="assets/CheckCircle.png" alt="">Capture ideas with structure built-in from day one</li>
-                <li><img src="assets/CheckCircle.png" alt="">Connect related concepts automatically as you write</li>
-                <li><img src="assets/CheckCircle.png" alt="">Build lasting knowledge through reflection prompts</li>
-                <li><img src="assets/CheckCircle.png" alt="">Find anything instantly with semantic search</li>
+                <li><img src="assets/CheckCircle.png" alt=""> Capture ideas with structure built-in from day one</li>
+                <li><img src="assets/CheckCircle.png" alt=""> Connect related concepts automatically as you write</li>
+                <li><img src="assets/CheckCircle.png" alt=""> Build lasting knowledge through reflection prompts</li>
+                <li><img src="assets/CheckCircle.png" alt=""> Find anything instantly with semantic search</li>
             </ul>
+          </div>
         </div>
 
      </section>
